crates/ai/tests/snapshots/tool_outputs_parity__output_get_holdings_scoped.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "acc-1",
    "currency": "USD",
    "holdings": [],
    "totalValue": -0.0,
    "viewMode": "table"
  }
}
