crates/ai/tests/snapshots/tool_outputs_parity__output_get_income.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "byMonth": {},
    "byType": {},
    "currency": "USD",
    "monthlyAverage": 0.0,
    "period": "ALL",
    "topAssets": [],
    "totalIncome": 0.0
  }
}
