crates/ai/tests/snapshots/tool_outputs_parity__output_get_valuation_history.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "all",
    "currency": "USD",
    "endDate": "2024-03-01",
    "startDate": "2024-01-01",
    "valuations": []
  }
}
