crates/ai/tests/snapshots/tool_outputs_parity__output_get_valuation_history_scoped.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "accountScope": "acc-1",
    "currency": "USD",
    "endDate": "2024-12-31",
    "startDate": "2024-01-01",
    "valuations": []
  }
}
