crates/ai/tests/snapshots/tool_outputs_parity__output_list_asset_taxonomies.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "ok": {
    "taxonomies": []
  }
}
