crates/ai/tests/snapshots/tool_outputs_parity__output_list_asset_taxonomies_invalid_depth.snap
---
source: crates/ai/tests/tool_outputs_parity.rs
expression: result
---
{
  "err": "categoryDepth must be 'root' or 'all', got 'bogus'"
}
